[gd_scene load_steps=3 format=3 uid="uid://cg1edfmw2d2t1"]

[ext_resource type="Theme" uid="uid://cy7tgwoexgs4m" path="res://assets/menu.tres" id="1_exp1m"]
[ext_resource type="Script" path="res://scripts/menu.gd" id="1_xrep5"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 1.0
offset_right = 4.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_exp1m")
script = ExtResource("1_xrep5")

[node name="VBoxContainerBotones" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 113.0
offset_top = -117.0
offset_right = 393.0
offset_bottom = 214.0
grow_vertical = 2

[node name="Button_jugar" type="Button" parent="VBoxContainerBotones"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Jugar"

[node name="Button_newGame" type="Button" parent="VBoxContainerBotones"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "New Game"

[node name="Button_selectLevel" type="Button" parent="VBoxContainerBotones"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Select Level"

[node name="Button_options" type="Button" parent="VBoxContainerBotones"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="Button_Creditos" type="Button" parent="VBoxContainerBotones"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Creditos"

[node name="Button_salir" type="Button" parent="VBoxContainerBotones"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Salir"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 106.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 75
text = "Platform Grinder"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainerBotones/Button_jugar" to="." method="_on_button_jugar_pressed"]
[connection signal="pressed" from="VBoxContainerBotones/Button_newGame" to="." method="_on_button_new_game_pressed"]
[connection signal="pressed" from="VBoxContainerBotones/Button_selectLevel" to="." method="_on_button_select_level_pressed"]
[connection signal="pressed" from="VBoxContainerBotones/Button_options" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="VBoxContainerBotones/Button_Creditos" to="." method="_on_button_creditos_pressed"]
[connection signal="pressed" from="VBoxContainerBotones/Button_salir" to="." method="_on_button_salir_pressed"]
